# LlamaIndex

./: agent_a.py  agent_b.py  agent_c.py  ai_research_assistant.py  app.py  description.txt  file_service.py  final_v1.py  main.py  package-lock.json  pdf_load.py  test.ipynb  test.py  test2.ipynb  test2.py
.ipynb_checkpoints/: test-checkpoint.ipynb
my-app/backend/: pyproject.toml
my-app/backend/app/: llmhub.py
my-app/backend/app/api/services/: file.py
my-app/backend/config/: loaders.yaml  tools.yaml
my-app/frontend/: .env  next.config.json  package-lock.json  package.json
my-app2/backend/: pyproject.toml
my-app2/frontend/: package-lock.json  package.json
output/uploaded/: 3星.txt
prompt/: agent_a_prompt.py  agent_b_prompt.py  agent_c_prompt.py
storage/"Weak AI" is Likely to Never Become "Strong AI", So What is its Greatest Value for us?/: default__vector_store.json  docstore.json  index_store.json
storage/A Study on the Implementation Method of an Agent-Based Advanced RAG System Using Graph/: default__vector_store.json  docstore.json  index_store.json
storage/Attention Is All You Need_1706.03762v7/: default__vector_store.json  docstore.json  index_store.json
storage/Automated Fuzzing of Automotive Control Units/: default__vector_store.json  docstore.json  index_store.json
storage/BERT Pre-training of Deep Bidirectional Transformers for Language  Understanding_1810.04805v2/: default__vector_store.json  docstore.json  index_store.json
storage/ColPali Efficient Document Retrieval with Vision Language Models/: docstore.json  (+2 more)
templates/: index.html
(+109 files in other folders)
